# codelab-workspace

./: .gitignore  .gitmodules  AGENT_ATTEMPT_COMPLETION_FIX.md  AGENT_LOGS_ANALYSIS.md  AGENT_RESPONSIBILITIES_ARCHITECTURE.md  AGENT_RUNTIME_IMPLEMENTATION_STATUS.md  ALL_AGENTS_ATTEMPT_COMPLETION_FIX.md  ARCHITECT_AGENT_PLAN_EXECUTION_FIX.md  ARCHITECT_PLAN_NOT_EXECUTING_ISSUE.md  BENCHMARK_TASK_024_ANALYSIS.md  BRANCH_COMPARISON_REPORT.md  BUGFIXES_DETAILED_REPORT.md  CODELAB_IDE_PLAN_APPROVAL_CHANGES.md  COMMIT_MESSAGE_EXECUTION_LAYER.md  DOCUMENTATION_AUDIT_REPORT.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_PLAN_EXECUTION_SUMMARY.md  GATEWAY_AUTO_SESSION_IMPLEMENTATION_COMPLETE.md  IMPORT_ERROR_FIX_REPORT.md  LICENSE  LOG_ANALYSIS_REPORT.md  ORCHESTRATOR_CLASSIFICATION_FIX.md  PATH_VALIDATOR_FIX.md  PLANNING_INTEGRATION_FINAL_REPORT.md  PLANNING_INTEGRATION_STATUS.md  PLANNING_INTEGRATION_SUMMARY.md  PLANNING_SUPPORT_ANALYSIS_CODELAB_IDE.md  PLAN_APPROVAL_FINAL_IMPLEMENTATION.md  PLAN_APPROVAL_IMPLEMENTATION_SUMMARY.md  PLAN_APPROVAL_TEST_SCENARIOS.md  PLAN_EXECUTION_AUTO_APPROVE_SOLUTION.md  PLAN_EXECUTION_TOOL_CALL_ISSUE.md  PROJECT_ROADMAP_2026.md  README.md  SUBTASK_INFINITE_LOOP_FIX.md  SUBTASK_IS_FINAL_FIX.md  TASK_024_ROOT_CAUSE_ANALYSIS.md  TOOLS_IMPLEMENTATION_ANALYSIS.md  WORKSPACE_VISIBILITY_FIX.md  (+4 more)
benchmark-standalone/: .env.example  .gitignore  AGENT_IMPROVEMENTS.md  CHANGELOG.md  IMPLEMENTATION_REPORT.md  ORCHESTRATOR_PLANNING_PROPOSAL.md  PLANNING_APPROVAL_ANALYSIS.md  PLANNING_INTEGRATION_GUIDE.md  PLANNING_MIGRATION.md  QUICKSTART.md  (+14 more)
(+336 files in other folders)
