[project]
name = "benchmark-standalone"
version = "1.0.0"
description = "Независимое приложение для benchmark тестирования AI-агентов через Gateway WebSocket"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sergey Penkovsky", email = "sergey.penkovsky@gmail.com" }]

dependencies = [
    # WebSocket клиент для общения с Gateway
    "websockets>=16.0",
    # Парсинг задач и конфигурации
    "pyyaml>=6.0.0",
    # База данных для метрик
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    # Валидация данных
    "pydantic>=2.5.0",
    # Конфигурация
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "ty>=0.0.1a31",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ty]
# Type checking configuration
requirements_txt = "requirements.txt"
